[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Working through Sebastian Raschka's Build a Large Language Model from Scratch"
requires-python = ">=3.12"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "UP", "ANN"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"